# kakaotalk-adblock-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: debug_window.rs  icon.rs  locale.rs  main.rs  process.rs  startup.rs  version.rs  window.rs
