[package]
name = "kakaotalk_adblock"
version = "0.0.0"  # Actual version set by build.rs via BUILD_VERSION env
edition = "2021"
authors = ["ssut"]
description = "AdBlocker for KakaoTalk Windows client"
license = "MIT"
repository = "https://github.com/ssut/kakaotalk-adblock-rs"
homepage = "https://github.com/ssut/kakaotalk-adblock-rs"
build = "build.rs"

[dependencies]
# Windows API (official Microsoft crate)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

# System tray
tray-icon = "0.19"
muda = "0.15"

# HTTP for version check
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parking lot for faster mutex
parking_lot = "0.12"

# Once cell for lazy statics
once_cell = "1.19"

# Open URLs in browser
open = "5"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "kakaotalk_adblock"
path = "src/main.rs"
